# network_security

./: README.md  main.py  push_data.py  pyproject.toml
Artifacts/09_02_2025_15_35_21/data_ingestion/NetworkData/: data.csv
Artifacts/09_02_2025_15_35_21/data_ingestion/ingested/: test.csv  train.csv
Artifacts/09_02_2025_15_36_08/data_ingestion/ingested/: test.csv  train.csv
Artifacts/09_02_2025_15_36_08/data_transformation/transformed/: train.npy
Artifacts/09_02_2025_15_36_08/data_transformation/transformed_object/: preprocessing.pkl
Artifacts/09_02_2025_15_36_08/data_validation/drift_reprot/: reprot.yaml
NetworkData/: data.csv
data_schema/: schema.yaml
final_model/: model.pkl
mlruns/0/: meta.yaml
mlruns/0/b435c4bc1f59420a8bba249537a64c6a/: meta.yaml
mlruns/0/b435c4bc1f59420a8bba249537a64c6a/metrics/: f1_score  precision_score  recall_score
mlruns/0/b435c4bc1f59420a8bba249537a64c6a/tags/: mlflow.runName
mlruns/0/f8fa263cdb094e8bb1a6b5b852808611/: meta.yaml
mlruns/0/f8fa263cdb094e8bb1a6b5b852808611/metrics/: f1_score  precision_score  recall_score
mlruns/0/f8fa263cdb094e8bb1a6b5b852808611/tags/: mlflow.runName
mlruns/0/models/m-2c171ca429c84b2b913696306c3af493/: meta.yaml
mlruns/0/models/m-3a74157ff76049b3b0825a26903ec6ed/: meta.yaml
src/networksecurity/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
src/networksecurity/entity/: artifact_entity.py  config_entity.py
src/networksecurity/exception/: exception.py
src/networksecurity/logging/: logger.py
(+17 files in other folders)
