[project]
name = "network-security"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dnspython==2.7.0",
    "numpy==2.3.2",
    "pandas==2.3.2",
    "pymongo==4.14.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "six==1.17.0",
    "tzdata==2025.2",
]

[dependency-groups]
dev = [
    "network-security",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
network-security = { workspace = true }
    